Improve dialog styling on small viewports (always show border, fix stretched layout for find-or-create entity dialog)

--- a/styles/editor/_elementSelector.scss
+++ b/styles/editor/_elementSelector.scss
@@ -2,9 +2,12 @@
 @use "../theme/theme";
 
 .reactodia-element-selector {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
+
+  &--search-existing {
+    flex: auto;
+  }
 
   &__search {
     flex-shrink: 0;
