--- a/styles/widgets/_dialog.scss
+++ b/styles/widgets/_dialog.scss
@@ -11,16 +11,6 @@
   display: flex;
   flex-direction: column;
 
-  &--fill-viewport {
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-  
-    border: none;
-    border-radius: none;
-  }
-
   &__header {
     display: flex;
   }
